<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorFondoLogin"
    tools:context="com.example.edwardmpro.smartlight.Login">

    <EditText
        style="@style/edittext_style"
        android:inputType="textEmailAddress"
        android:id="@+id/edt_user"
        android:hint="@string/txt_us"/>
    <EditText
        style="@style/edittext_style"
        android:inputType="textPassword"
        android:id="@+id/edt_password"
        android:hint="@string/txt_ps"/>
    <Button
        android:id="@+id/btn_login"
        style="@style/btn_style"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        android:text="@string/txt_login"
        android:onClick="clickIngresar"/>
    <Button
        android:id="@+id/btn_registtt"
        style="@style/btn_style"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        android:text="@string/txt_regis"
        android:onClick="clickRegistro"/>

</LinearLayout>
