<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.example.edwardmpro.smartlight.ControlActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearContenedor">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Conexion">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView"
                        android:layout_marginRight="41dp"
                        android:layout_marginEnd="41dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/linearPruebaConexion"
                        android:gravity="center"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/text_Dispo"
                            android:id="@+id/tv_sendorldr"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp" />
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/rg_TipCon"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp">
                            <RadioButton
                                android:id="@+id/buttonOn"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:background="@drawable/rb_tcone"
                                android:button="@null"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/txt_on"
                                android:textColor="@drawable/rb_textcolortcone" />
                            <RadioButton
                                android:id="@+id/buttonOff"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:background="@drawable/rb_tcone"
                                android:button="@null"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/txt_off"
                                android:textColor="@drawable/rb_textcolortcone" />
                        </RadioGroup>
                        <TextView
                            android:id="@+id/sensorView0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Resultado 1"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/linearContenedorSensorHumedadyTemperatura"
                    android:weightSum="1"
                    android:id="@+id/Sensores">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="Sensores"
                        android:id="@+id/textView2"
                        android:textStyle="bold"
                        android:textSize="15dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sensor Humedad y Temperatura"
                        android:id="@+id/checkBox"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Grabador de Audio"
                        android:id="@+id/checkBox2"
                        android:checked="false" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="frecuencia (minutos)"
                        android:gravity="right"
                        android:id="@+id/textView7"
                        android:textSize="12dp"
                        android:layout_marginRight="15dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="10"
                            android:id="@+id/txtView_frecuencia_seekBar_DHT11"
                            android:layout_gravity="center"
                            android:textSize="20dp" />

                        <SeekBar
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:progress="10"
                            android:max="60"
                            android:id="@+id/seekBarSensor"
                            android:indeterminate="false"
                            android:layout_marginBottom="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="Resultado1: "
                            android:id="@+id/textView4" />

                        <TextView
                            android:id="@+id/sensorView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sensorView0"
                            android:layout_centerHorizontal="true"
                            android:text="Resultado 2: ????"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="Resultado2: "
                            android:id="@+id/textView5" />

                        <TextView
                            android:id="@+id/sensorView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sensorView1"
                            android:layout_centerHorizontal="true"
                            android:text="Resultado 3: ????"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider"/>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Almacenamiento">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Almacenamiento disponible"
                        android:id="@+id/textView6"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="Resultado4: "
                            android:id="@+id/textView8" />

                        <TextView
                            android:id="@+id/sensorView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sensorView2"
                            android:layout_centerHorizontal="true"
                            android:text="Resultado 4: ????"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="30/100"
                            android:id="@+id/textView3"
                            android:layout_gravity="center" />

                        <ProgressBar
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/progressBarAlmacenamiento"
                            android:progress="30"
                            android:indeterminate="false"
                            android:max="100"
                            android:layout_marginLeft="10dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>




    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/testView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtString"
            android:text="Tamaño del String = "
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtString"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/testView1"
            android:layout_alignParentBottom="true"
            android:text="Datos recibidos ="
            android:textSize="15sp" />
    </LinearLayout></LinearLayout>
